--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -192,8 +192,8 @@
                     </div>
                 </article>
                 
-                <div class="d-flex justify-content-center mb-5 mt-3">
-                    <iframe width="400" height="315" class="rounded-2" src="https://www.youtube.com/embed/zglkYq-4zxY" title="YouTube video player" frameborder="0" allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <div class="d-flex justify-content-center mb-5 mt-3 ps-3 pe-3">
+                    <iframe class="rounded-2" height="260px" src="https://www.youtube.com/embed/zglkYq-4zxY" frameborder="0" allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
             </div>
 
